# focusd

./: Cargo.toml  LICENSE  focusd_personality.db  tauri.conf.json
docs/: backend_api_reference.md  backend_services_todo.md  example_ai_prompt.md  personality_questions_and_answers.md
src/: esp32_serial_test.rs  lib.rs  main.rs
src/backend/: ai.rs  ai_provider.rs  alarms.rs  analytics.rs  cards.rs  dashboard.rs  distractions.rs  events.rs  goals.rs  journals.rs  migration.rs  mod.rs  orchestrator.rs  personality_db.rs  personality_questions.rs  prompt_assembler.rs  safety.rs  sessions.rs  settings.rs  utility.rs
src/tests/: ai_provider_tests.rs
tests/: ai_provider_tests.rs  card_crud_tests.rs  daily_fetchers_tests.rs  orchestrator_tests.rs  session_event_tests.rs
