[package]
name = "focusd"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "esp32_serial_test"
path = "src/esp32_serial_test.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "focusd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.7.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
keyring = "1.1"

rusqlite = { version = "0.31", features = ["bundled"] }
time = "0.3"
once_cell = "1.21.3"
chrono = "0.4.41"
aes-gcm = "0.10.3"
rand = "0.9.2"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
regex = "1"

[dev-dependencies]
tempfile = "3"

